plugins {
  id 'java'
  id 'org.springframework.boot' version '3.1.+'
  id 'io.spring.dependency-management' version '1.1.4'
  id 'org.springdoc.openapi-gradle-plugin' version '1.8.+'
}

group = 'steve.com'
version = '0.0.1-SNAPSHOT'

description = "brewlog"

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

tasks.withType(Test) {
  useJUnitPlatform()
}

ext {
  mapstructVersion = "1.5.5.Final"
  lombokVersion = "1.18.30"
  lombokMapstructBindingVersion = "0.2.0"
  openapiVersion = "1.7.+"
  openapiWebmvcVersion = "2.3.+"
  jsonwebtokenVersion = "0.12.+"
  assertjVersion = "3.23.1"
  testContainersVersion = "1.19.3"
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
    mavenLocal()
    mavenCentral()
}

bootJar {
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "io.jsonwebtoken:jjwt-api:${jsonwebtokenVersion}"
    implementation "io.jsonwebtoken:jjwt-impl:${jsonwebtokenVersion}"
    implementation "io.jsonwebtoken:jjwt-jackson:${jsonwebtokenVersion}"
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openapiWebmvcVersion}"
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
    implementation platform("org.testcontainers:testcontainers-bom:${testContainersVersion}")

    compileOnly "org.projectlombok:lombok:${lombokVersion}"

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation "org.projectlombok:lombok:${lombokVersion}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testImplementation "org.testcontainers:testcontainers"
    testImplementation "org.testcontainers:junit-jupiter"
    testImplementation "org.testcontainers:postgresql"

    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
}

